Finished the first version of the smithing system.

--- a/src/main/resources/assets/feudal_functions/lang/en_US.lang
+++ b/src/main/resources/assets/feudal_functions/lang/en_US.lang
@@ -8,26 +8,55 @@ item.feudal_functions:parts_copper.axe_head.name=Copper Axe Head
 item.feudal_functions:parts_copper.pickaxe_head.name=Copper Pickaxe Head
 item.feudal_functions:parts_copper.hoe_head.name=Copper Hoe Head
 item.feudal_functions:parts_copper.shovel_head.name=Copper Shovel Head
-item.feudal_functions:parts_copper.sword_blade.name=Copper Sword Head
+item.feudal_functions:parts_copper.sword_blade.name=Copper Sword Blade
 item.feudal_functions:parts_copper.hammer_head.name=Copper Hammer Head
 item.feudal_functions:parts_bronze.axe_head.name=Bronze Axe Head
 item.feudal_functions:parts_bronze.pickaxe_head.name=Bronze Pickaxe Head
 item.feudal_functions:parts_bronze.hoe_head.name=Bronze Hoe Head
 item.feudal_functions:parts_bronze.shovel_head.name=Bronze Shovel Head
-item.feudal_functions:parts_bronze.sword_blade.name=Bronze Sword Head
+item.feudal_functions:parts_bronze.sword_blade.name=Bronze Sword Blade
 item.feudal_functions:parts_bronze.hammer_head.name=Bronze Hammer Head
 item.feudal_functions:parts_iron.axe_head.name=Iron Axe Head
 item.feudal_functions:parts_iron.pickaxe_head.name=Iron Pickaxe Head
 item.feudal_functions:parts_iron.hoe_head.name=Iron Hoe Head
 item.feudal_functions:parts_iron.shovel_head.name=Iron Shovel Head
-item.feudal_functions:parts_iron.sword_blade.name=Iron Sword Head
+item.feudal_functions:parts_iron.sword_blade.name=Iron Sword Blade
 item.feudal_functions:parts_iron.hammer_head.name=Iron Hammer Head
+item.feudal_functions:parts_gold.axe_head.name=Golden Axe Head
+item.feudal_functions:parts_gold.pickaxe_head.name=Golden Pickaxe Head
+item.feudal_functions:parts_gold.hoe_head.name=Golden Hoe Head
+item.feudal_functions:parts_gold.shovel_head.name=Golden Shovel Head
+item.feudal_functions:parts_gold.sword_blade.name=Golden Sword Blade
+item.feudal_functions:parts_gold.hammer_head.name=Golden Hammer Head
 item.feudal_functions:parts_steel.axe_head.name=Steel Axe Head
 item.feudal_functions:parts_steel.pickaxe_head.name=Steel Pickaxe Head
 item.feudal_functions:parts_steel.hoe_head.name=Steel Hoe Head
 item.feudal_functions:parts_steel.shovel_head.name=Steel Shovel Head
-item.feudal_functions:parts_steel.sword_blade.name=Steel Sword Head
+item.feudal_functions:parts_steel.sword_blade.name=Steel Sword Blade
 item.feudal_functions:parts_steel.hammer_head.name=Steel Hammer Head
+item.feudal_functions:tool_axe_copper.name=Copper Axe
+item.feudal_functions:tool_pickaxe_copper.name=Copper Pickaxe
+item.feudal_functions:tool_hoe_copper.name=Copper Hoe
+item.feudal_functions:weapon_sword_copper.name=Copper Sword
+item.feudal_functions:tool_shovel_copper.name=Copper Sword
+item.feudal_functions:tool_hammer_copper.name=Copper Hammer
+item.feudal_functions:tool_axe_bronze.name=Bronze Axe
+item.feudal_functions:tool_pickaxe_bronze.name=Bronze Pickaxe
+item.feudal_functions:tool_hoe_bronze.name=Bronze Hoe
+item.feudal_functions:weapon_sword_bronze.name=Bronze Sword
+item.feudal_functions:tool_shovel_bronze.name=Bronze Sword
+item.feudal_functions:tool_hammer_bronze.name=Bronze Hammer
+item.feudal_functions:tool_axe_steel.name=Steel Axe
+item.feudal_functions:tool_pickaxe_steel.name=Steel Pickaxe
+item.feudal_functions:tool_hoe_steel.name=Steel Hoe
+item.feudal_functions:weapon_sword_steel.name=Steel Sword
+item.feudal_functions:tool_shovel_steel.name=Steel Sword
+item.feudal_functions:tool_hammer_steel.name=Steel Hammer
+item.feudal_functions:tool_hammer_stone.name=Stone Hammer
+item.feudal_functions:tool_hammer_iron.name=Iron Hammer
+item.feudal_functions:tool_hammer_gold.name=Gold Hammer
+item.feudal_functions:tool_hammer_diamond.name=Diamond Hammer
+
 tile.feudal_functions:ore.copper.name=Copper Ore
 tile.feudal_functions:ore.tin.name=Tin Ore
 tile.feudal_functions:ore.silver.name=Silver Ore
