PlayerDataStorage can now hold several NBT data compounds for each player.

--- a/src/main/resources/assets/feudal_functions/lang/en_US.lang
+++ b/src/main/resources/assets/feudal_functions/lang/en_US.lang
@@ -75,4 +75,4 @@ tile.feudal_functions:ore.tin.name=Tin Ore
 tile.feudal_functions:ore.silver.name=Silver Ore
 
 potion.frostbite=Frostbite
-potion.sunstroke=Sunstroke
+potion.heatstroke=Heatstroke
